[Application] Fix main menu - not centered.

--- a/app/assets/stylesheets/sass/main.sass
+++ b/app/assets/stylesheets/sass/main.sass
@@ -3364,13 +3364,14 @@ label.error
   padding: 0
   list-style: none
   background: #000
+  text-align: center
 
 #prog_nav li
-  float: left
-  margin: 0 1px 0 0
+  margin: 0 1px -2px 0
   padding: 0
-  font: 1.4em "Raleway",Arial !important
+  font: 1.4em "Raleway", Arial !important
   letter-spacing: .15em
+  display: inline-block
 
 #prog_nav a
   float: left
